# goliath_tank

./: Cargo.toml
.github/: dependabot.yml
crates/goliath_backend/: Cargo.toml
crates/goliath_backend/src/: main.rs
crates/goliath_backend/src/cache_db/: mod.rs
crates/goliath_backend/src/security/: certification_generator.rs  mod.rs
crates/goliath_backend/src/server_core/: mod.rs  types.rs
crates/goliath_client/: Cargo.toml
crates/goliath_client/src/: main.rs
crates/goliath_client/src/application_state/: init_state.rs  mod.rs  newly_connected.rs  pending_state.rs
crates/goliath_client/src/config/: mod.rs
crates/goliath_client/src/utils/: mod.rs  ui_utils.rs
crates/goliath_common/: Cargo.toml
crates/goliath_common/src/: lib.rs
crates/goliath_common/src/core/: mod.rs
crates/goliath_common/src/dev/: mod.rs
crates/goliath_common/src/logging/: mod.rs
crates/goliath_common/src/security/: mod.rs  registration.rs  verifier.rs
crates/goliath_common/src/websocket/: mod.rs
crates/goliath_stm/: Cargo.toml
crates/goliath_stm/.cargo/: config
crates/goliath_stm/src/: main.rs
crates/goliath_vehicle/: Cargo.toml
crates/goliath_vehicle/src/: main.rs
