[package]
name = "goliath_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "1.3", default-features = false }
goliath_common = { path = "../goliath_common" }
log = { version = "0.4", default-features = false, features = ["std"] }
rcgen = { version = "0.12", default-features = false, features = ["ring", "pem"] }
rsa = { version = "0.9", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracy-client = { version = "0.17", default-features = false, features = ["enable", "context-switch-tracing", "sampling"] }
tokio = { version = "1.36", default-features = false, features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tokio-rustls = { version = "0.25", default-features = false }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["__rustls-tls"] }
tokio-stream = { version = "0.1", default-features = false }

