[package]
name = "goliath_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.26", default-features = false, features = ["glow"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
goliath_common = { path = "../goliath_common" }
log = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.38", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.21", default-features = false }
