[package]
name = "goliath_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["development"]
development = []

[dependencies]
base64 = { version = "0.21", default-features = false, features = ["std"] }
bincode = { version = "1.3", default-features = false }
env_logger = { version = "0.11", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = { version = "0.4", default-features = false, features = ["std"] }
rustls = { version = "0.22", default-features = false }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
sha256 = { version = "1.5", default-features = false }
thiserror = { version = "1.0", default-features = false }
time = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1.36", default-features = false, features = ["net", "sync", "rt"] }
tokio-rustls = { version = "0.25", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["__rustls-tls", "connect"] }
