[package]
name = "goliath_stm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m =  { version = "0.7.7" }
cortex-m-rt = { version =  "0.7.4" }
cortex-m-semihosting = { version = "0.5.0" }
panic-semihosting = { version = "0.6.0" }
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l432"] }

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations

[workspace]
