[package]
name = "goliath_vehicle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goliath_common = { path = "../goliath_common" }
log = { version = "0.4", default-features = false, features = ["std"] }
tokio = { version = "1.37", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.21", default-features = false }
